--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
           </div>
         </div>
       </div>
+      <div class="login__footer">© Лашин Александр | создано с любовью в LoftSchool | 2019</div>
     </section>
-    <footer class="footer-login">© Лашин Александр | создано с любовью в LoftSchool | 2019</footer>
     <script src="auth.bundle.js"></script>
   </body>
 </html>
