--- a/portfolio.html
+++ b/portfolio.html
@@ -129,17 +129,19 @@
           </div>
           <div class="recommendations__feedback">
             <form class="feedback">
-              <div class="feedback__title">
-                <h2 class="title">Связаться со мной</h2>
-              </div>
-              <div class="feedback__name">
-                <input class="name" name="name" placeholder="Имя">
-              </div>
-              <div class="feedback__email">
-                <input class="email" name="email" placeholder="Email">
-              </div>
-              <div class="feedback__message">
-                <textarea class="message" name="message" cols="30" rows="10" placeholder="Ваше сообщение"></textarea>
+              <div class="feedback-controls">
+                <div class="feedback__title">
+                  <h2 class="title">Связаться со мной</h2>
+                </div>
+                <div class="feedback__name">
+                  <input class="name" name="name" placeholder="Имя">
+                </div>
+                <div class="feedback__email">
+                  <input class="email" name="email" placeholder="Email">
+                </div>
+                <div class="feedback__message">
+                  <textarea class="message" name="message" cols="30" rows="10" placeholder="Ваше сообщение"></textarea>
+                </div>
               </div>
               <div class="feedback__actions"> 
                 <div class="button button--left">Отправить</div>
