--- a/blog.html
+++ b/blog.html
@@ -49,18 +49,12 @@
           </div>
         </section>
         <section class="blog">
-          <div class="blog__triangle">
-            <div class="blog__triangle-col">
-              <svg class="triangle--svg-left-triagle" viewbox="0 0 1000 150">
-                <polygon points="0 0, 1000 150, 0 150"></polygon>
-              </svg>
-            </div>
-            <div class="blog__triangle-col">
-              <svg class="triangle--svg-right-triagle" viewbox="0 0 1000 150">
-                <polygon points="0 150, 1000 0, 1000 150"></polygon>
-              </svg>
-            </div>
-          </div>
+          <svg class="triangle--svg-left-triagle" viewbox="0 0 1000 150">
+            <polygon points="0 0, 1000 150, 0 150"></polygon>
+          </svg>
+          <svg class="triangle--svg-right-triagle" viewbox="0 0 1000 150">
+            <polygon points="0 150, 1000 0, 1000 150"></polygon>
+          </svg>
           <div class="blog__content">
             <div class="blog__col blog__col--left">
               <ul class="blog-menu">   
@@ -109,45 +103,46 @@
                   <h2 class="art-title">Почему я выбрал Jade</h2>
                 </div>
                 <div class="blog-art__date">5 ноября 2016</div>
-                <article>
-                   Таким образом начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке направлений прогрессивного развития. Разнообразный и богатый опыт новая модель организационной деятельности играет важную роль в формировании новых предложений. Товарищи! новая модель организационной деятельности играет важную роль в формировании систем массового участия.
+                <article class="blog-art__html">
+                  Таким образом начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке направлений прогрессивного развития. Разнообразный и богатый опыт новая модель организационной деятельности играет важную роль в формировании новых предложений. Товарищи! новая модель организационной деятельности играет важную роль в формировании систем массового участия.
                   Не следует, однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации модели развития. С другой стороны рамки и место обучения кадров влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям.
                   <img>
                 </article>
               </div>
             </div>
           </div>
+          <footer class="footer">
+            <div class="footer__row">
+              <div class="footer__col">
+                <ul class="menu">
+                  <il class="menu__item"><a class="menu_link" href="portfolio.html">Мои работы</a></il>
+                  <il class="menu__item"><a class="menu_link" href="about.html">Обо мне</a></il>
+                  <il class="menu__item"><a class="menu_link" href="blog.html">Блог</a></il>
+                  <il class="menu__item"><a class="menu_link" href="index.html">Авторизация</a></il>
+                </ul>
+              </div>
+              <div class="footer__col footer__col--justify-end">
+                <ul class="socials">
+                  <li class="socials__item socials__item--round"><a class="social__link" href="https://vk.com/id436024674" target="_blank">
+                      <!--+icon(social, 'socials__icon')-->
+                      <div class="socials__icon inlined-svg-vk"></div></a></li>
+                  <li class="socials__item socials__item--round"><a class="social__link" href="https://github.com/white84" target="_blank">
+                      <!--+icon(social, 'socials__icon')-->
+                      <div class="socials__icon inlined-svg-github"></div></a></li>
+                  <li class="socials__item socials__item--round"><a class="social__link" href="https://ru.linkedin.com/" target="_blank">
+                      <!--+icon(social, 'socials__icon')-->
+                      <div class="socials__icon inlined-svg-in"></div></a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="footer__row">
+              <div class="footer__col"> Я веб-разработчик из Подольска, и этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. </div>
+              <div class="footer__col footer__col--justify-end">© Лашин Александр | создано с любовью в LoftSchool | 2019</div>
+            </div>
+          </footer>
         </section>
       </div>
-      <footer class="footer">
-        <div class="footer__row">
-          <div class="footer__col">
-            <ul class="menu">
-              <il class="menu__item"><a class="menu_link" href="portfolio.html">Мои работы</a></il>
-              <il class="menu__item"><a class="menu_link" href="about.html">Обо мне</a></il>
-              <il class="menu__item"><a class="menu_link" href="blog.html">Блог</a></il>
-              <il class="menu__item"><a class="menu_link" href="index.html">Авторизация</a></il>
-            </ul>
-          </div>
-          <div class="footer__col footer__col--justify-end">
-            <ul class="socials">
-              <li class="socials__item socials__item--round"><a class="social__link" href="https://vk.com/id436024674" target="_blank">
-                  <!--+icon(social, 'socials__icon')-->
-                  <div class="socials__icon inlined-svg-vk"></div></a></li>
-              <li class="socials__item socials__item--round"><a class="social__link" href="https://github.com/white84" target="_blank">
-                  <!--+icon(social, 'socials__icon')-->
-                  <div class="socials__icon inlined-svg-github"></div></a></li>
-              <li class="socials__item socials__item--round"><a class="social__link" href="https://ru.linkedin.com/" target="_blank">
-                  <!--+icon(social, 'socials__icon')-->
-                  <div class="socials__icon inlined-svg-in"></div></a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="footer__row">
-          <div class="footer__col"> Я веб-разработчик из Подольска, и этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. </div>
-          <div class="footer__col footer__col--justify-end">© Лашин Александр | создано с любовью в LoftSchool | 2019</div>
-        </div>
-      </footer>
+      <!--include ./common/footer.pug-->
     </div>
     <script src="bootloader.bundle.js"></script>
     <script src="vendor.bundle.js"></script>
